# endow

./: .gitignore  CHANGELOG.md  README.md  example.py  pyproject.toml
src/endow/: __about__.py  __init__.py  backend.py  base.py  policy.py  runtime.py
tests/: dependency_one.py  dependency_two.py  dependency_zero.py  test_policy.py  test_runtime.py
