[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "endow"
dynamic = ["version"]
description = "to provide with something freely or naturally"
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.hatch.version]
path = "src/endow/__about__.py"
