[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "endow"
dynamic = ["version"]
description = "DI without the boilerplate. Authorization without the escape hatches."
requires-python = ">=3.12"
readme = { file = "README.md", content-type = "text/markdown" }

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "python-semantic-release<8",
]

[tool.hatch.version]
path = "src/endow/__about__.py"
[tool.pytest]
pythonpath = [
    "src",
]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "if t.TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "except ImportError as e:",
    "except ImportError:",
    ]

[tool.ruff]
src = ["src"]
include = ["src/**/*.py"]

target-version = "py312"
line-length = 120


[tool.ruff.lint]

select = [
    "F", # pyflake error
    "E", # pycodestyle error
    "W", # pycodestyle warning
    "Q", # quotes
    "A", # builtins
    "D", # docstrings
    # "C4", # comprehensions
    # "RET", # return
    "SIM", # simplify
    "ARG", # unused arguments
    # "COM", # comma's
    "PTH", # use pathlib
    "RUF", # ruff rules
    "C90", # mccabe (complexity)
    #    "I", # isort
    "N", # pep-8 naming
    # "D", # pydocstyle
    # "UP", # pyupgrade
    "YTT", # flake8-2020 (version hardcoding)
    "ANN", # annotations
    # "ASYNC", # async - gebruiken we hier niet
    # "S", # bandit (security)
    # "BLE", # blind except
    # "FBT", # boolean trap
    "B", # bugbear
    # "DTZ", # datetimes
    # "T10", # debugger
    # "DJ", # django
    # "ISC", # implicit string concat (handig voor als je een , mist in een lijst bijv.)
    "SIM", # simplify
]

ignore = [
    # Allow non-abstract empty methods in abstract base classes
    "B027",
    # Use formatter-compatible docstring conventions.
    "D203", "D213",
    # Allow boolean positional values in function calls, like `dict.get(... True)`
    "FBT003",
    # Ignore checks for possible passwords
    "S105", "S106", "S107",
    # Ignore complexity
    "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
    "ANN401", # t.Any
]
unfixable = []

[tool.isort]
profile = "black"

[tool.ty.src]
include = ["src"]

[tool.ruff.lint.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.semantic_release]
branch = "master"
version_variable = "src/endow/__about__.py:__version__"
change_log = "CHANGELOG.md"
upload_to_repository = false
upload_to_release = false
build_command = "hatch build"

[tool.su6]
directory = "src"
stop-after-first-failure = true
include = [
    "ruff",
    "mypy",
    "bandit",
    "pytest",
]
exclude = []
coverage = 100
badge = false
